# DStar-DB

./: .gitignore  CMakeLists.txt  README.md  dstar_persisted_storage.db
.github/workflows/: c-cpp.yml
include/: Constants.h  EventLoop.h  GlobalThreadPool.h  ThreadPool.h
include/ClientManager/: Client.h  ClientManager.h  TransactionContext.h
include/CommandProcessor/: CommandProcessor.h
include/Database/: Database.h  DbOperations.h  IConsumerGroup.h  IDatabase.h  IHyperLogLogValue.h  IListValue.h  ISetValue.h  ISortedSetValue.h  IStreamValue.h  IValue.h  Record.h  ValueFactory.h
include/Database/Commands/: CommandRegistry.h  Commands.h  ICommand.h
include/Database/Commands/ConcreteCommands/: DELCommand.h  EXISTSCommand.h  GETCommand.h  InvalidCommand.h  PINGCommand.h  SETCommand.h
include/Database/ConcreteValues/: HashValue.h  HyperLogLogValue.h  ListValue.h  SetValue.h  SortedSetValue.h  StreamValue.h  StringValue.h
include/Database/ConcreteValues/Stream/: StreamConsumerGroup.h  StreamMessage.h
include/Database/Decorators/: TTLDatabaseDecorator.h
include/Database/Observer/: IDatabaseObserver.h
include/Database/Persistence/: IPersistenceManager.h  PersistenceFactory.h
include/Database/Persistence/Implementations/: AOFPersistence.h  SnapshotPersistence.h
include/Database/Serializer/: IDBSerializer.h  SerializationHelper.h  ValueSerializationHelper.h
include/MemoryManager/: MemoryManager.h
src/: MemoryManager.cpp  Record.cpp  ValueFactory.cpp  ValueSerializationHelper.cpp  main.cpp  server.cpp
(+50 files in other folders)
